fixed index overflow

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -66,6 +66,11 @@ caption p {
     word-wrap: break-word;
 }
 
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 .row.row-flex {
     display: initial;
     flex-wrap: wrap;
@@ -74,7 +79,7 @@ caption p {
 }
 
 .totes {
-    margin-left: 30px;
+    margin-left: 15px;
 }
 
 .panel-default {
@@ -121,6 +126,10 @@ caption p {
     margin-right: 0px;
     margin-left: 0px;
     width: 100%;
+}
+
+#blocky {
+    padding-bottom: 100px;    
 }
 
 /*---------------------------------------Headers*/
@@ -216,4 +225,12 @@ caption p {
 
 navbar-default {
     background-color: black;
+}
+
+.navbar-fixed-top {
+    max-width: 100%;    
+}
+
+.payment-form {
+    padding-bottom: 100px;
 }
